fixed svg clipping

--- a/src/components/Timeline/timeline.css
+++ b/src/components/Timeline/timeline.css
@@ -14,7 +14,7 @@
 }
 
 .produceGridItem {
-  border: 1px solid black;
+  /* background-color: rgba(255, 255, 255, 0.6); */
   color: white;
   height: 60px;
   text-align: center;
